@@ -35,3 +35,4 @@ FRAMEWORK:
   - pymysql-newest
   - aiohttp-newest
   - aiopg-newest
+  - tornado-newest
