@@ -1,0 +1,3 @@
+tornado>=5.0.0,<6.0
+pytest-tornado
+-r requirements-base.txt
